# lambda-dyndns-fritzbox-updater

./: Cargo.toml  README.md
src/: errors.rs  main.rs
