[package]
name = "lambda-dnydns-fritzbox-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.7.2", features = ["apigw_http"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.91"
serde = "1.0.152"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt"] }

aws-config = "0.53.0"
aws-sdk-secretsmanager = "0.23.0"
